--- a/app/src/html/home.html
+++ b/app/src/html/home.html
@@ -109,9 +109,9 @@
             type="submit"
             onclick="window.location.href='/send'"
             class="focus:ring-inset-2 focus:ring-inset-macosAccent-600 block
-            w-full md:w-2/3 lg:w-1/2 border border-transparent bg-black px-5
+            w-full sm:w-2/3 md:w-3/5 lg:w-1/2 border border-transparent bg-black px-5
             py-3 text-base font-medium text-white hover:bg-gray-600
-            focus:outline-none focus:ring-2 focus:ring-white sm:px-10 mx-auto">
+            focus:outline-none focus:ring-2 focus:ring-white mt-8 lg:mt-0 mx-auto">
             Send Crypto
           </button>
         </div>
