--- a/app/src/html/home.html
+++ b/app/src/html/home.html
@@ -109,9 +109,11 @@
             type="submit"
             onclick="window.location.href='/send'"
             class="focus:ring-inset-2 focus:ring-inset-macosAccent-600 block
-            w-full sm:w-2/3 md:w-3/5 lg:w-1/2 border border-transparent bg-black px-5
+            w-full sm:w-2/3 md:w-3/5 lg:w-1/2 border border-transparent bg-black
+            px-5
             py-3 text-base font-medium text-white hover:bg-gray-600
-            focus:outline-none focus:ring-2 focus:ring-white mt-8 lg:mt-0 mx-auto">
+            focus:outline-none focus:ring-2 focus:ring-white mt-8 lg:mt-0
+            mx-auto">
             Send Crypto
           </button>
         </div>
@@ -194,7 +196,7 @@
         </div>
       </div>
     </section>
-    
+
     <section class="divide-y border-b border-black">
       <div
         class="container relative mx-auto border-black bg-macosLight-300 px-5
@@ -282,7 +284,7 @@
                   <div class="text-2xl font-medium leading-9 text-left
                     text-wvsc-100">
                     <p>
-                      "Yo sending crypto permissionlessly over email, this shit
+                      "Yo, sending crypto permissionlessly over email, this shit
                       is nutss 🙀"
                     </p>
                     <footer class="text-base font-medium text-gray-500">
@@ -294,7 +296,7 @@
 
               <div class="lg:flex-shrink-0">
                 <img
-                  class="h-64 w-64 xl:h-80 xl:w-80 object-cover"
+                  class="h-64 w-64 xl:h-80 xl:w-80 object-cover mt-6 md:mt-0"
                   src="https://media.wired.com/photos/593303d158b0d64bb35d40be/master/pass/balaji-srinivasan.jpg"
                   alt=""
                   />
@@ -380,35 +382,43 @@
       </section>
 
 
-    <section class="divide-y border-b border-black" id="links">
-      <div
-        class="container relative mx-auto border-black bg-macosLight-300 px-5
-        lg:border-r lg:border-l lg:px-16">
-        <div class="w-full lg:mx-auto lg:w-2/3">
-          <div
-            class="mx-auto max-w-xl px-4 sm:px-6 lg:mx-0 lg:max-w-none lg:py-16
-            lg:px-0">
-            <div class="mt-6 pb-10 lg:text-center">
-              <h2
-                class="title-font mb-8 text-5xl font-light tracking-tighter
-                text-black md:text-5xl">
-                Official Links.
-              </h2>
-              <!-- <a href="https://opensea.io/assets/{{ contractAddress}}" target="_blank" -->
-                <a href="https://opensea.io/collection/polyfaucet" target="_blank" class="mx-1 underline">OpenSea</a>
-                <a href="https://rarible.com/collection/polygon/{{ contractAddress }}" target="_blank" class="mx-1 underline">Rarible</a>
-                <!-- <a href="https://looksrare.org/collections/{{ contractAddress}}" target="_blank"
-                  class="mx-1 underline">LooksRare</a> -->
-                <a href="https://polygonscan.com/address/{{ contractAddress}}" target="_blank"
-                  class="mx-1 underline">Polygonscan</a>
-                <a href="https://github.com/ProphetFund/polyfaucet" target="_blank" class="mx-1 underline">Github</a>
+      <section class="divide-y border-b border-black" id="links">
+        <div
+          class="container relative mx-auto border-black bg-macosLight-300 px-5
+          lg:border-r lg:border-l lg:px-16">
+          <div class="w-full lg:mx-auto lg:w-2/3">
+            <div
+              class="mx-auto max-w-xl px-4 sm:px-6 lg:mx-0 lg:max-w-none
+              lg:py-16
+              lg:px-0">
+              <div class="mt-6 pb-10 lg:text-center">
+                <h2
+                  class="title-font mb-8 text-5xl font-light tracking-tighter
+                  text-black text-center md:text-5xl">
+                  Official Links.
+                </h2>
+                <div class="mx-auto w-full text-center">
+                  <!-- <a href="https://opensea.io/assets/{{ contractAddress}}" target="_blank" -->
+                  <a href="https://opensea.io/collection/polyfaucet"
+                    target="_blank" class="mx-1 text-center underline">OpenSea</a>
+                  <a href="https://rarible.com/collection/polygon/{{
+                    contractAddress }}" target="_blank" class="mx-1 text-center
+                    underline">Rarible</a>
+                  <!-- <a href="https://looksrare.org/collections/{{ contractAddress}}" target="_blank"
+                  class="mx-1 text-center underline">LooksRare</a> -->
+                  <a href="https://polygonscan.com/address/{{ contractAddress}}"
+                    target="_blank"
+                    class="mx-1 text-center underline">Polygonscan</a>
+                  <a href="https://github.com/ProphetFund/polyfaucet"
+                    target="_blank" class="mx-1 text-center underline">Github</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="border-b border-black lg:divide-y" id="how">
+      <section class="border-b border-black lg:divide-y">
         <div
           class="container relative mx-auto border-black bg-macosAccent-400 px-5
           lg:border-r lg:border-l lg:px-16">
@@ -416,7 +426,7 @@
             <div
               class="mx-auto max-w-xl px-4 sm:px-6 lg:mx-0 lg:max-w-none lg:px-0
               lg:pt-16">
-              <div class="mt-6 pb-10 lg:text-center">
+              <div class="pb-10 pt-6 lg:text-center">
                 <h2
                   class="title-font mb-8 text-5xl font-light tracking-tighter
                   text-macosLight-300 md:text-5xl">
@@ -463,7 +473,7 @@
         </div>
       </section>
 
-    
+
 
 
       <footer class="border-t border-black" aria-labelledby="footer-heading">
