so much to do so lil time. Added mail, contracts, send. Not functional yet.

--- a/app/src/html/home.html
+++ b/app/src/html/home.html
@@ -432,6 +432,9 @@
                   text-macosLight-300 md:text-5xl">
                   Subscribe for when we launch new stuff
                 </h2>
+                <p class="text-base leading-6 text-macosLight-300">
+                  We launch cool stuff all the time, maybe there's an airdrop or a whitelist for you if you sign up :)
+                </p>
               </div>
               <form
                 class="mt-8"
@@ -483,6 +486,7 @@
           pt-12 pb-4 sm:px-6 lg:px-12 lg:py-24">
           <div class="flex flex-col lg:flex-row space-y-10 w-100 justify-center
             text-center lg:justify-start lg:text-left">
+            
             <div class="grow text-comet">
               <span class="text-blueGray-600 text-lg font-bold lg:text-2xl"><div
                   class="inline-flex items-center">
@@ -498,9 +502,10 @@
               </p>
             </div>
 
-            <div class="align-middle">
+            <!-- TODO: i cant get this shit to be aligned fuck -->
+            <div class="align-top my-auto">
               <br>
-              <p class="text-blueGray-600 text-center text-sm">
+              <p class="text-blueGray-600 text-center align-top text-sm">
                 Made with 💙 by
                 <a
                   href="https://www.twitter.com/uwwgo"
