--- a/app/src/html/home.html
+++ b/app/src/html/home.html
@@ -99,7 +99,7 @@
               </h2>
               <p class="mt-4 text-lg text-gray-500">
                 No need for a bank account or their wallet address. Mailcrypto
-                is a decentralized, non-custodial protocol that lets you send
+                is a blockchain based protocol that lets you send
                 ERC-20s and ERC-721s to any email address. It's free, we take no
                 fees.
               </p>
@@ -432,7 +432,7 @@
         </div>
       </section>
 
-      <section class="border-b border-black lg:divide-y">
+      <section class="border-black lg:divide-y">
         <div
           class="container relative mx-auto border-black bg-macosAccent-400 px-5
           lg:border-r lg:border-l lg:px-16">
