--- a/app/src/html/claim.html
+++ b/app/src/html/claim.html
@@ -68,7 +68,7 @@
       </nav>
     </div>
   </div>
-  <section class="border-b border-black lg:divide-y">
+  <section class="border-black lg:divide-y">
     <div class="container relative mx-auto border-black bg-macosLight-300 px-5
         py-16 lg:border-r lg:border-l lg:px-16">
       <div class="w-full lg:mx-auto xl:w-2/3">
@@ -80,8 +80,9 @@
             <div>
               <div class="mt-6 lg:text-center">
                 <h2 class="title-font mb-3 text-5xl font-black tracking-tighter
-                    text-black md:text-2xl"> Please check your email address for the correct claiming link.
+                    text-black md:text-2xl"> Claim your $!
                 </h2>
+                <p>{{ deposit }}</p>
               </div>
             </div>
 
