--- a/app/src/html/error.html
+++ b/app/src/html/error.html
@@ -68,7 +68,7 @@
       </nav>
     </div>
   </div>
-  <section class="border-b border-black lg:divide-y">
+  <section class="border-black lg:divide-y">
     <div class="container relative mx-auto border-black bg-macosLight-300 px-5
         py-16 lg:border-r lg:border-l lg:px-16">
       <div class="w-full lg:mx-auto xl:w-2/3">
