--- a/app/src/html/send.html
+++ b/app/src/html/send.html
@@ -34,8 +34,14 @@
     rel="stylesheet" />
 </head>
 
-<body class="mx-auto w-full bg-macosLight-300 bg-cover bg-center bg-no-repeat
+<body x-data class="mx-auto w-full bg-macosLight-300 bg-cover bg-center bg-no-repeat
     md:bg-bodyCover">
+    <script>
+      // set some flask variables
+      var contractAddress = "{{ contractAddress }}";
+    </script>
+
+
   <div class="fixed z-50 w-full">
     <div class="container mx-auto border-black bg-macosLight-300 px-8 md:pl-12
         lg:border-b lg:border-r lg:border-l lg:px-0 lg:pl-16">
@@ -68,7 +74,8 @@
       </nav>
     </div>
   </div>
-  <section class="border-b border-black lg:divide-y">
+
+  <section class="border-black lg:divide-y">
     <div class="container relative mx-auto border-black bg-macosLight-300 px-5
         py-16 lg:border-r lg:border-l lg:px-16">
       <div class="w-full lg:mx-auto xl:w-2/3">
@@ -84,15 +91,16 @@
                 </h2>
                 <p class="mt-4 text-lg text-gray-500">
                   Currently on:
-                  <a href="#" class="font-medium text-indigo-600
-                      hover:text-indigo-500"> Polygon Mainnet</a>
+                  <a href="https://polygon.technology/" class="font-medium text-indigo-600
+                      hover:text-indigo-500"> Polygon Mumbai</a>
                 </p>
               </div>
             </div>
 
 
             <!-- ==== POST FORM ==== -->
-            <form class="mt-8 space-y-6" action="/send" method="POST">
+            <form class="mt-8 space-y-6" action="/send" method="POST" id="depositForm"
+            x-data="{ message: '', email: '', amount: '', loading: false }">
 
               <div>
                 <label for="email" class="block text-sm font-black                  
@@ -109,7 +117,7 @@
                             002-2V8.118z" />
                     </svg>
                   </div>
-                  <input id="email" name="email" type="email" autocomplete="email" required class="focus:ring-indigo-500 focus:border-indigo-500
+                  <input x-model="email" id="email" name="email" type="email" autocomplete="email" required class="focus:ring-indigo-500 focus:border-indigo-500
                           block w-full pl-10 sm:text-sm border-gray-300
                           rounded-md" placeholder="alex@example.com">
                 </div>
@@ -123,7 +131,7 @@
                           items-center pointer-events-none">
                     <span class="text-gray-500 sm:text-sm"> $ </span>
                   </div>
-                  <input name="amount" id="amount" required type="text" autocomplete="amount" class="focus:ring-indigo-500 focus:border-indigo-500
+                  <input x-model="amount" name="amount" id="amount" required type="text" autocomplete="amount" class="focus:ring-indigo-500 focus:border-indigo-500
                           block w-full pl-7 pr-12 sm:text-sm border-gray-300
                           rounded-md" placeholder="0.00" aria-describedby="price-currency">
                   <div class="absolute inset-y-0 right-0 pr-3 flex
@@ -137,13 +145,17 @@
               <div>
                 <label for="comment" class="block text-sm font-black text-gray-700">Message</label>
                 <div class="mt-1">
-                  <textarea rows="2" name="message" id="message" maxlength="100"  placeholder="&quot;Hello John here's your payment for last weeks repairs...&quot;"
+                  <textarea rows="2" x-model="message" name="message" id="message" maxlength="100"  placeholder="&quot;Hello John here's your payment for last weeks repairs...&quot;"
                     class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 block w-full sm:text-sm border-gray-300 rounded-md"></textarea>
                 </div>
               </div>
-
-
-              <button type="submit" class="focus:ring-inset-2
+              <!-- Connect if not connected, else submit transaction -->
+              <button  
+                x-html="Alpine.store('buttonContent')"
+                x-on:click=" Alpine.store('connected') ?  makeDeposit(amount, message, email) : Alpine.store('signer', connect())"
+              type="button"
+              
+              class="focus:ring-inset-2 
                       focus:ring-inset-macosAccent-600 block
                       w-full sm:w-2/3 md:w-3/5 lg:w-4/5 border
                       border-transparent
@@ -154,10 +166,10 @@
                       mt-8
                       lg:mt-14
                       mx-auto">
-                Send Crypto
               </button>
+              
               <div class="text-sm text-center underline mt-4">
-                <a href="https://polygonscan.com/address/0x616d197a29e50ebd08a4287b26e47041286f171d"
+                <a href="https://mumbai.polygonscan.com/address/{{ contractAddress}}" target="_blank"
                   class="text-gray-500 hover:text-gray-600">
                   Polygonscan
                 </a>
@@ -215,9 +227,12 @@
   <footer>
     </div>
   </footer>
-  <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+  <!-- Alpine.js 3 -->
+  <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+
   <script src="https://cdn.ethers.io/lib/ethers-5.2.umd.min.js"
         type="application/javascript" defer></script>
+  <script src="/src/js/abi.js" defer></script>
   <script src="/src/js/crypto.js" defer></script>
   <script src="/src/js/metamask.js" defer></script>
 
